# HPLOP

./: .gitignore  LICENSE  Makefile  README.md  cleaner  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  document_issue.yml  feature_request.md  feature_request.yml
demo/: demo.py  simconfig.py
docs/: conf.py  index.rst  installation.rst
docs/_static/: hplop.css
docs/api_reference/: index.rst
docs/contributor_guide/: index.rst
docs/getting_started/: index.rst
docs/user_guide/: index.rst
src/hplop/core/: equations.pxd  equations.pyx  main.py  old_main.py
src/hplop/pck/: pck.pxd  pck.pyx
src/hplop/solver/: rkn1210.pyx  rkn1210_coeffs.pxd  rkn1210_coeffs.pyx
src/hplop/utils/: plot_utils.py  utils.py
