[metadata]
name = hplop
version = 0.0.1
long_description = file: README.md
author = Alfonso Sánchez Rodríguez
author_email = alfonso.sr.trabajo@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
package_dir = =src
python_requires = >=3.9
install_requires =
    numpy>=1.22
    scipy>=1.8
    matplotlib>=3.5
    Cython>=0.29.28
    spiceypy>=5.0.0
setup_requires = cython>=0.29.26
zip_safe = False

[options.packages.find]
exclude = dev*
where = src
